// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebhooksLogs should match a snapshot where loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="ebhrnzh-el-loader-container"
      >
        <div
          class="eq1m1jz-el-loader"
        >
          <div
            class="exikdu1-el-loader-moving-bar"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="ebhrnzh-el-loader-container"
    >
      <div
        class="eq1m1jz-el-loader"
      >
        <div
          class="exikdu1-el-loader-moving-bar"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`WebhooksLogs should match a snapshot where no appId 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="epibvz0-el-intent-secondary evmehgn-el-is-active e1qwk99x-el-pn-is-full-width e15e3rd4-el-pn-is-inline erhlo5n-el-persistent-notification"
      >
        <div
          class="eta6kcl-el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="ej9yrfo-el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="e1geon40-el-pn-content"
        >
          No app or date range selected. Please use the filters option to get started.
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="epibvz0-el-intent-secondary evmehgn-el-is-active e1qwk99x-el-pn-is-full-width e15e3rd4-el-pn-is-inline erhlo5n-el-persistent-notification"
    >
      <div
        class="eta6kcl-el-pn-icon"
        data-testid="close-icon"
      >
        <span
          class="ej9yrfo-el-icon"
        >
          <svg />
        </span>
      </div>
      <div
        class="e1geon40-el-pn-content"
      >
        No app or date range selected. Please use the filters option to get started.
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`WebhooksLogs should match a snapshot where no data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="epibvz0-el-intent-secondary evmehgn-el-is-active e1qwk99x-el-pn-is-full-width e15e3rd4-el-pn-is-inline erhlo5n-el-persistent-notification"
      >
        <div
          class="eta6kcl-el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="ej9yrfo-el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="e1geon40-el-pn-content"
        >
          No logs found for this application. Select another app, date range or trigger a webhook to see the logs appear here.
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="epibvz0-el-intent-secondary evmehgn-el-is-active e1qwk99x-el-pn-is-full-width e15e3rd4-el-pn-is-inline erhlo5n-el-persistent-notification"
    >
      <div
        class="eta6kcl-el-pn-icon"
        data-testid="close-icon"
      >
        <span
          class="ej9yrfo-el-icon"
        >
          <svg />
        </span>
      </div>
      <div
        class="e1geon40-el-pn-content"
      >
        No logs found for this application. Select another app, date range or trigger a webhook to see the logs appear here.
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`WebhooksLogs should match a snapshot where there are subscriptions 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="ejadz4k-el-table"
        data-has-call-to-action="true"
        data-has-expandable-action="false"
        data-num-columns-excl-action-col="7"
      >
        <div
          class="e1ijk5il-el-table-headers-row"
        >
          <div
            class="e1mqmoqy-el-span2 e1co3p83-el-table-header"
          >
            Timestamp
          </div>
          <div
            class="e1mqmoqy-el-span2 e1co3p83-el-table-header"
          >
            URL
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            Topic
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            Entity ID
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            Status
          </div>
          <div
            class="e1co3p83-el-table-header"
          >
            Download Payload
          </div>
        </div>
        <div
          class="es3tf1j-el-table-row-container"
        >
          <div
            class="e1qy4g2u-el-table-row"
          >
            <div
              class="e1mqmoqy-el-span2 e1gfmg2g-el-table-cell"
            >
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Timestamp"
              >
                2021-04-13T12:17:04.177+00:00
              </div>
            </div>
            <div
              class="e1mqmoqy-el-span2 e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
            >
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="URL"
              >
                https://3391b00a1f9c1fcae3e09d28dd99b7c9.m.pipedream.net
              </div>
            </div>
            <div
              class="e1gfmg2g-el-table-cell"
            >
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Topic"
              >
                application.install
              </div>
            </div>
            <div
              class="e1gfmg2g-el-table-cell"
            >
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Entity ID"
              >
                MOCK_ID
              </div>
            </div>
            <div
              class="e1gfmg2g-el-table-cell"
            >
              <div
                class="e4zpaja-el-table-cell-content"
                data-narrow-label="Status"
              >
                200
              </div>
            </div>
            <div
              class="ewmoxzc-el-table-cta-cell"
            >
              <div
                class="e1t8i3z1-el-table-cta-icon-container"
              >
                <span
                  class="ebee6r1-el-intent-primary ej9yrfo-el-icon"
                  style="font-size: 1.2rem;"
                >
                  <svg />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="ejadz4k-el-table"
      data-has-call-to-action="true"
      data-has-expandable-action="false"
      data-num-columns-excl-action-col="7"
    >
      <div
        class="e1ijk5il-el-table-headers-row"
      >
        <div
          class="e1mqmoqy-el-span2 e1co3p83-el-table-header"
        >
          Timestamp
        </div>
        <div
          class="e1mqmoqy-el-span2 e1co3p83-el-table-header"
        >
          URL
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          Topic
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          Entity ID
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          Status
        </div>
        <div
          class="e1co3p83-el-table-header"
        >
          Download Payload
        </div>
      </div>
      <div
        class="es3tf1j-el-table-row-container"
      >
        <div
          class="e1qy4g2u-el-table-row"
        >
          <div
            class="e1mqmoqy-el-span2 e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Timestamp"
            >
              2021-04-13T12:17:04.177+00:00
            </div>
          </div>
          <div
            class="e1mqmoqy-el-span2 e1n0yfsy-el-table-cell-has-dark-text e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="URL"
            >
              https://3391b00a1f9c1fcae3e09d28dd99b7c9.m.pipedream.net
            </div>
          </div>
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Topic"
            >
              application.install
            </div>
          </div>
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Entity ID"
            >
              MOCK_ID
            </div>
          </div>
          <div
            class="e1gfmg2g-el-table-cell"
          >
            <div
              class="e4zpaja-el-table-cell-content"
              data-narrow-label="Status"
            >
              200
            </div>
          </div>
          <div
            class="ewmoxzc-el-table-cta-cell"
          >
            <div
              class="e1t8i3z1-el-table-cta-icon-container"
            >
              <span
                class="ebee6r1-el-intent-primary ej9yrfo-el-icon"
                style="font-size: 1.2rem;"
              >
                <svg />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
